fixed uneven nav sticky

--- a/css/core/_header.scss
+++ b/css/core/_header.scss
@@ -25,7 +25,7 @@
     &.sticky {
 
         > .container {
-            height: 4.5em;
+            height: 5em;
 
             .navigation {
                 transform: scale(0)
